--- a/front/package.json
+++ b/front/package.json
@@ -10,8 +10,10 @@
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "shortid": "^2.2.15"
   },
   "scripts": {
     "start": "react-scripts start",
